# console/console.swagger.json
@@ -604,6 +604,79 @@
         ]
       }
     },
+    "/v2/console/rpc/{id}": {
+      "get": {
+        "summary": "Execute a Lua function on the server.",
+        "operationId": "RpcFunc2",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiRpc"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "The identifier of the function.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "payload",
+            "description": "The payload of the function which must be a JSON object.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "http_key",
+            "description": "The authentication key used when executed as a non-client HTTP request.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Console"
+        ]
+      },
+      "post": {
+        "summary": "Execute a Lua function on the server.",
+        "operationId": "RpcFunc",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiRpc"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "The identifier of the function.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "description": "The payload of the function which must be a JSON object.",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "tags": [
+          "Console"
+        ]
+      }
+    },
     "/v2/console/status": {
       "get": {
         "summary": "Get current status data for all nodes.",
@@ -1251,6 +1324,24 @@
         }
       },
       "description": "A notification in the server."
+    },
+    "apiRpc": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "description": "The identifier of the function."
+        },
+        "payload": {
+          "type": "string",
+          "description": "The payload of the function which must be a JSON object."
+        },
+        "http_key": {
+          "type": "string",
+          "description": "The authentication key used when executed as a non-client HTTP request."
+        }
+      },
+      "description": "Execute an Lua function on the server."
     },
     "apiStorageObject": {
       "type": "object",
